strum working, maybe do it on a set timeout,fix spacing, drop beat, add other tunings and chords

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -153,7 +153,7 @@ border-radius: 2%;
   position: relative;
 
   right:15%;
-  margin-top: 15%;
+  margin-top: 9%;
 
 }
 #neck{
